--- a/index.html
+++ b/index.html
@@ -7,5 +7,65 @@
   <title>Awesome Website</title>
 </head>
 <body>
+  <div class="header">
+    <div class="left-links"><a href="#" class="header-logo">Header Logo</a></div>
+    <div class="right-links">
+      <a href="#">header link one</a>
+      <a href="#">header link two</a>
+      <a href="#">header link three</a>
+    </div>
+  </div>
+
+  <div class="hero">
+    <div class="hero-left">
+      <div class="hero-main">This website is awesome</div>
+      <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</div>
+      <button class="sign-up">Sign up</button>
+    </div>
+    <div class="hero-right">
+      <img width="450" height="225" src="resources/placeholder-large-1.jpg" alt="Long exposure photo of a waterfall">
+    </div>
+  </div>
+
+  <div class="info">
+    <div class="info-header">Some random information.</div>
+    <div class="info-content">
+      <div class="info-photo">
+        <img width="210" height="140" src="resources/placeholder-small-1.jpg" alt="study materials">
+        <div class="photo-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info-photo">
+        <img width="210" height="140" src="resources/placeholder-small-2.jpg" alt="photo of a beach">
+        <div class="photo-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info-photo">
+        <img width="210" height="140" src="resources/placeholder-small-3.jpg" alt="brick building with warm colours in windows">
+        <div class="photo-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="info-photo">
+        <img width="210" height="140" src="resources/placeholder-small-4.jpg" alt="baby watching dad mop">
+        <div class="photo-text">this is some subtext under an illustration or image</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="quote-section">
+    <div class="quote">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice</div>
+    <div class="quote-author">- Thor, God of Thunder</div>
+  </div>
+
+  <div class="call-to-action">
+    <div>
+      <div class="header-logo">Call to action! It's time!</div>
+      <div class="hero-secondary">Sign up for our product by clicking that button right over there!</div>
+    </div>
+    <div>
+      <button class="sign-up white-border">Sign up</button>
+    </div>
+  </div>
+
+  <div class="footer">
+    This page was directly copied from The Odin Project and is subject to their copyright.
+  </div>
 </body>
 </html>
