--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <div class="header">
     <div class="left-links"><a href="#" class="header-logo">Header Logo</a></div>
     <div class="right-links">
-      <a href="#">header link one</a>
-      <a href="#">header link two</a>
-      <a href="#">header link three</a>
+      <a href="#" class="secondary-text">header link one</a>
+      <a href="#" class="secondary-text">header link two</a>
+      <a href="#" class="secondary-text">header link three</a>
     </div>
   </div>
 
   <div class="hero">
     <div class="hero-left">
       <div class="hero-main">This website is awesome</div>
-      <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</div>
+      <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</div>
       <button class="sign-up">Sign up</button>
     </div>
     <div class="hero-right">
@@ -50,21 +50,21 @@
   </div>
 
   <div class="quote-section">
-    <div class="quote">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice</div>
+    <div class="quote-text">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice</div>
     <div class="quote-author">- Thor, God of Thunder</div>
   </div>
 
   <div class="call-to-action">
     <div>
       <div class="header-logo">Call to action! It's time!</div>
-      <div class="hero-secondary">Sign up for our product by clicking that button right over there!</div>
+      <div class="secondary-text">Sign up for our product by clicking that button right over there!</div>
     </div>
     <div>
       <button class="sign-up white-border">Sign up</button>
     </div>
   </div>
 
-  <div class="footer">
+  <div class="footer secondary-text">
     This page was directly copied from The Odin Project and is subject to their copyright.
   </div>
 </body>
