Position all elements on webpage according to layout.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
 </head>
 <body>
   <div class="header">
-    <div class="left-links"><a href="#" class="header-logo">Header Logo</a></div>
-    <div class="right-links">
-      <a href="#" class="secondary-text">header link one</a>
-      <a href="#" class="secondary-text">header link two</a>
-      <a href="#" class="secondary-text">header link three</a>
+    <div class="page-width">
+      <div class="left-links"><a href="#" class="header-logo">Header Logo</a></div>
+      <div class="right-links">
+        <a href="#" class="secondary-text">header link one</a>
+        <a href="#" class="secondary-text">header link two</a>
+        <a href="#" class="secondary-text">header link three</a>
+      </div>
     </div>
   </div>
 
   <div class="hero">
-    <div class="hero-left">
-      <div class="hero-main">This website is awesome</div>
-      <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</div>
-      <button class="sign-up">Sign up</button>
-    </div>
-    <div class="hero-right">
-      <img width="450" height="225" src="resources/placeholder-large-1.jpg" alt="Long exposure photo of a waterfall">
+    <div class="page-width">
+      <div class="hero-left">
+        <div class="hero-main">This website is awesome</div>
+        <div class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</div>
+        <a href="#"><button class="sign-up">Sign up</button></a>
+      </div>
+      <div class="hero-right">
+        <img width="450" height="225" src="resources/placeholder-large-1.jpg" alt="Long exposure photo of a waterfall">
+      </div>
     </div>
   </div>
 
@@ -50,17 +54,21 @@
   </div>
 
   <div class="quote-section">
-    <div class="quote-text">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice</div>
-    <div class="quote-author">- Thor, God of Thunder</div>
+    <div class="quote-container">
+      <div class="quote-text">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice</div>
+      <div class="quote-author">- Thor, God of Thunder</div>
+    </div>
   </div>
 
-  <div class="call-to-action">
-    <div>
-      <div class="header-logo">Call to action! It's time!</div>
-      <div class="secondary-text">Sign up for our product by clicking that button right over there!</div>
-    </div>
-    <div>
-      <button class="sign-up white-border">Sign up</button>
+  <div class="cta-container">
+    <div class="call-to-action">
+      <div>
+        <div class="header-logo">Call to action! It's time!</div>
+        <div class="secondary-text">Sign up for our product by clicking that button right over there!</div>
+      </div>
+      <div>
+        <a href="#"><button class="sign-up white-border">Sign up</button></a>
+      </div>
     </div>
   </div>
 
